[package]
name = "leanpub"
version = "0.1.4"
authors = ["Patrik Svensson <patrik@patriksvensson.se>"]
description = "Unofficial Leanpub API client."
repository = "https://github.com/patriksvensson/leanpub-rs"
license = "MIT"

[dependencies]
curl = "0.4.12"
failure = "0.1.1"
serde = "1.0.67"
serde_derive = "1.0.67"
serde_json = "1.0"
